# beam

./: '  AGENTS.md  Cargo.toml  README.md  RELEASE.md  build_macos_app.sh  dist-workspace.toml
.github/workflows/: release.yml
assets/: icon.icns
examples/: custom_text_input_demo.rs  repro_alignment.rs  undo_test.rs  url_input_demo.rs
src/: constant.rs  http.rs  icons.rs  lib.rs  main.rs  sample-json.json  script.rs  types.rs
src/history/: mod.rs
src/storage/: conversions.rs  file_storage.rs  mod.rs  persistent_types.rs
src/ui/: collections.rs  custom_text_input.rs  editor_view.rs  environment.rs  floating_element.rs  icon.rs  managed_text_input.rs  mod.rs  request.rs  response.rs  segmented_text_input.rs  spinner.rs  undoable.rs  undoable_editor.rs  undoable_input.rs  url_input.rs  widget_calc.rs
