[package]
name = "beam"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.6"
sipper = "0.1"
tokio = { version = "1.47.1", features = ["fs", "rt-multi-thread", "macros"] }
image = { version = "0.25", default-features = false }
iced = { version = "0.13.1", features = ["tokio", "image", "debug", "canvas", "advanced"] }

iced_aw = { version = "0.12.2", features = ["context_menu", "menu"] }


reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
urlencoding = "2.1"
base64 = "0.22"
regex = "1.10"

blurhash = "0.2.3"

[package.metadata.bundle]
name = "Beam"
identifier = "com.beam.app"
version = "0.1.0"
copyright = "Copyright (c) 2024 Beam"
category = "Developer Tool"
short_description = "A modern HTTP client for developers"
long_description = "Beam is a powerful and intuitive HTTP client designed for developers to test APIs, manage requests, and streamline their development workflow."
icon = ["assets/icon.icns"]
osx_minimum_system_version = "10.15"

