[package]
name = "beam"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.6"
sipper = "0.1"
tokio = { version = "1.47.1", features = ["fs", "rt-multi-thread", "macros"] }
image = { version = "0.25", default-features = false }
iced = { version = "0.14.0", features = ["tokio", "image", "debug", "canvas", "advanced", "highlighter", "svg"] }
# iced = { git = "https://github.com/iced-rs/iced", rev = "6279590", features = ["tokio", "image", "canvas", "advanced", "highlighter", "svg"] }

iced_aw = { version = "0.13.0", features = ["context_menu", "menu"] }
# iced_aw = { git = "https://github.com/iced-rs/iced_aw", rev= "0efedc7187dc5c87a104be33a4f230d28790a865", features = ["context_menu", "menu"] }
# iced_widget = { git = "https://github.com/iced-rs/iced.git", rev = "6279590" }
# iced_widget = { git = "https://github.com/iced-rs/iced.git", version = "0.14.0" }

reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.8"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
urlencoding = "2.1"
base64 = "0.22"
regex = "1.10"
rust-embed = "8.5"
blurhash = "0.2.3"
log = "0.4"
env_logger = "0.10"
rquickjs = "0.10.0"
lazy_static = "1.4"

[patch.crates-io]
iced = { git = "https://github.com/hlcfan/iced", branch = "fix-text-alignment" }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", rev = "0efedc7187dc5c87a104be33a4f230d28790a865", features = ["context_menu", "menu"] }

[package.metadata.bundle]
name = "Beam"
identifier = "com.hlcfan.beam"
version = "0.1.0"
copyright = "Copyright (c) 2025 Beam"
category = "Developer Tool"
short_description = "A HTTP client for developers"
long_description = "Beam is a HTTP client."
icon = ["assets/icon.icns"]
